@@ -4,6 +4,7 @@ HEAD, planned as v0.17
 - Added 64 bit support for Add and Sub components.
 - Added support of some more ATF150x chips.
 - Added a register file component.
+- Added an "export to zip" function.
 - Bug fixes
   - Splitter, BarrelShifter and Comparator now are working with 64 bit.
 
